[gd_scene load_steps=33 format=3 uid="uid://dacwg537ywn6j"]

[ext_resource type="Script" uid="uid://4tmnsuja7cq7" path="res://src/Assets/kitchen-assets/sugar.gd" id="1_dnhcq"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="2_qo6w6"]
[ext_resource type="Animation" uid="uid://db62hs5s4n2b3" path="res://addons/godot-xr-tools/hands/animations/left/Grip 4.res" id="3_f21o7"]
[ext_resource type="Script" uid="uid://bmclcwctwu3gd" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="4_tf5jc"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="5_xj8h4"]
[ext_resource type="Animation" uid="uid://d1xnpyc08njjx" path="res://addons/godot-xr-tools/hands/animations/right/Grip 4.res" id="6_yr7ly"]
[ext_resource type="Texture2D" uid="uid://febxpfbrlrie" path="res://src/Assets/00-general-3d-assets/Flare00.PNG" id="7_hchsq"]
[ext_resource type="Script" uid="uid://dq86gvhe6d20d" path="res://addons/ateneo-virtual-reality-escape/inventory-system/inventory_item.gd" id="8_agn6t"]
[ext_resource type="Script" uid="uid://cg1lorgur84yy" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-actor/ois_actor_component.gd" id="11_rivu6"]
[ext_resource type="PackedScene" uid="uid://mqj0l7lpabxm" path="res://src/Assets/kitchen-assets/glb/sugar2glb.glb" id="12_dnhcq"]
[ext_resource type="Script" uid="uid://cgettxdui2mmi" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-state-machine/ois_one_hand_tool_asm.gd" id="12_v1jg1"]
[ext_resource type="Script" uid="uid://b4ao0gdf7khuq" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-colliders/ois_collider_area3d.gd" id="13_0lms2"]
[ext_resource type="PackedScene" uid="uid://c1pv5eyb3pnow" path="res://src/Assets/00-general-3d-assets/grab_particle.tscn" id="13_f4o1p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tndqt"]
size = Vector3(0.106042, 0.154329, 0.0626278)

[sub_resource type="Resource" id="Resource_mv4es"]
script = ExtResource("4_tf5jc")
open_pose = ExtResource("3_f21o7")
closed_pose = ExtResource("3_f21o7")

[sub_resource type="Resource" id="Resource_qnege"]
script = ExtResource("4_tf5jc")
open_pose = ExtResource("6_yr7ly")
closed_pose = ExtResource("6_yr7ly")

[sub_resource type="Curve" id="Curve_vm6bv"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.77951, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_h4fn2"]
curve = SubResource("Curve_vm6bv")

[sub_resource type="Curve" id="Curve_uxxqw"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 360), 0.0, 0.0, 0, 0, Vector2(1, -360), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_xgs2e"]
curve = SubResource("Curve_uxxqw")

[sub_resource type="Gradient" id="Gradient_eqc7q"]
colors = PackedColorArray(0.956927, 0.990137, 0.995663, 1, 0.999999, 0.988373, 0.986389, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lnlxa"]
gradient = SubResource("Gradient_eqc7q")

[sub_resource type="Curve" id="Curve_38850"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.486726, 0), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_x8khj"]
curve = SubResource("Curve_38850")

[sub_resource type="Curve" id="Curve_sl68e"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hbsbo"]
curve = SubResource("Curve_sl68e")

[sub_resource type="Curve" id="Curve_w81y4"]
_limits = [-2.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_yk0pt"]
curve = SubResource("Curve_w81y4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4hih4"]
lifetime_randomness = 1.0
emission_shape_scale = Vector3(4.125, 0.72, 3.355)
emission_shape = 1
emission_sphere_radius = 0.01
inherit_velocity_ratio = 0.05
direction = Vector3(0, 0, 0)
spread = 0.0
angular_velocity_curve = SubResource("CurveTexture_xgs2e")
orbit_velocity_curve = SubResource("CurveTexture_yk0pt")
gravity = Vector3(0, -0.5, 0)
scale_min = 0.01
scale_max = 0.02
color_ramp = SubResource("GradientTexture1D_lnlxa")
alpha_curve = SubResource("CurveTexture_h4fn2")
emission_curve = SubResource("CurveTexture_x8khj")
hue_variation_curve = SubResource("CurveTexture_hbsbo")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lcyhm"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("7_hchsq")
uv1_scale = Vector3(1.015, 1.01, 13.465)

[sub_resource type="QuadMesh" id="QuadMesh_8xugr"]
material = SubResource("StandardMaterial3D_lcyhm")
size = Vector2(1.44, 1.31)

[sub_resource type="SphereShape3D" id="SphereShape3D_eloll"]
radius = 0.0666457

[node name="Sugar" type="RigidBody3D"]
collision_layer = 4
collision_mask = 196615
freeze_mode = 1
script = ExtResource("1_dnhcq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00246841, 0.00776008, -0.00117215)
shape = SubResource("BoxShape3D_tndqt")

[node name="GrabPointHandLeft" parent="." instance=ExtResource("2_qo6w6")]
transform = Transform3D(1, 0, 0, 0, 0.788011, -0.615662, 0, 0.615662, 0.788011, -0.0462619, 0.0363569, -0.0115657)
hand_pose = SubResource("Resource_mv4es")

[node name="GrabPointHandRight" parent="." instance=ExtResource("5_xj8h4")]
transform = Transform3D(1, 0, 0, 0, 0.788011, -0.615662, 0, 0.615662, 0.788011, 0.0578485, 0.0356365, -0.0191411)
hand_pose = SubResource("Resource_qnege")

[node name="SugarParticle" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00323703, 0.0984268, 0.0185388)
emitting = false
amount = 100
preprocess = 1.0
process_material = SubResource("ParticleProcessMaterial_4hih4")
draw_pass_1 = SubResource("QuadMesh_8xugr")

[node name="sugar2glb" parent="." instance=ExtResource("12_dnhcq")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.006)

[node name="InventoryItem" type="Node3D" parent="." node_paths=PackedStringArray("defined_mesh", "defined_collision_shape")]
script = ExtResource("8_agn6t")
unique = true
defined_mesh = NodePath("../sugar2glb")
defined_collision_shape = NodePath("../CollisionShape3D")
preferred_scale = 0.7
object_transform_adjustment = Vector3(0.01, 0, 0)

[node name="OISActorComponent" type="Node3D" parent="."]
script = ExtResource("11_rivu6")
receiver_group = "sugar"
metadata/_custom_type_script = "uid://cg1lorgur84yy"

[node name="OISOneHandToolASM" type="Node3D" parent="OISActorComponent"]
script = ExtResource("12_v1jg1")
metadata/_custom_type_script = "uid://cgettxdui2mmi"

[node name="OISColliderArea3D" type="Node3D" parent="OISActorComponent"]
script = ExtResource("13_0lms2")
metadata/_custom_type_script = "uid://b4ao0gdf7khuq"

[node name="Area3D" type="Area3D" parent="OISActorComponent/OISColliderArea3D"]
collision_layer = 536870912
collision_mask = 536870912

[node name="CollisionShape3D" type="CollisionShape3D" parent="OISActorComponent/OISColliderArea3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000298117, 0.149486, 0.00567205)
shape = SubResource("SphereShape3D_eloll")

[node name="GrabParticle" parent="." instance=ExtResource("13_f4o1p")]

[connection signal="grabbed" from="." to="." method="_on_grabbed"]
[connection signal="grabbed" from="." to="GrabParticle" method="_on_first_grab"]
[connection signal="released" from="." to="." method="_on_released"]
